--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -2228,7 +2228,7 @@ Im Tab *Übersicht* eines Auftrags findest du die wichtigsten Parameter zu einem
 
 | *IP-Adresse*
 |Zeigt optional die IP-Adresse der Kund:in an. +
-Die Option *IP-Adresse des Käufers* wird im Menü xref:webshop:bestellvorgang.adoc#[Einrichtung » Mandant » [Mandant wählen\] » Bestellvorgang » Einstellungen] aktiviert bzw. deaktiviert.
+Die Option *IP-Adresse des Käufers* wird im Menü *Einrichtung » Mandant » [Mandant wählen\] » Bestellvorgang » Einstellungen* aktiviert bzw. deaktiviert.
 
 | *Markierung*
 |Auf Wunsch dem Auftrag eine Markierung zuweisen. Mit Markierungen können Aufträge kategorisiert und so z.B. mit dem Suchfilter gesucht oder für automatische Funktionen, z.B. Ereignisaktionen, verwendet werden.
