--- a/docs/de-de/modules/auftraege/pages/scheduler.adoc
+++ b/docs/de-de/modules/auftraege/pages/scheduler.adoc
@@ -87,7 +87,7 @@ Die Abo-Funktion aktivierst du zuerst global und dann für jeden Artikel separat
 [.instruction]
 Abo-Funktion global aktivieren:
 
-. Öffne das Menü xref:webshop:mein-konto.adoc#[Einrichtung » Mandant » Mandant wählen » Mein Konto » Einstellungen].
+. Öffne das Menü *Einrichtung » Mandant » Mandant wählen » Mein Konto » Einstellungen*.
 . Wähle für die Option *Abonnements* die Einstellung *aktiviert*.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
