--- a/docs/de-de/modules/daten/pages/auftraege.adoc
+++ b/docs/de-de/modules/daten/pages/auftraege.adoc
@@ -343,7 +343,7 @@ In diesem Unterordner sind Datenfelder zu den Auftragspositionen gruppiert. Enth
 | Exportiert die Menge der Auftragsposition. Der automatisch generierte Export key für dieses Feld ist *orderItem.quantity*.
 
 | *Typ-ID*
-| Exportiert den Typ der Auftragsposition. Der xref:daten:interne-IDs.adoc#100[Typ] wird als ID exportiert. Der automatisch generierte Export key für dieses Feld ist *orderItem.typeId*.
+| Exportiert den Typ der Auftragsposition. Der Typ wird als ID exportiert. Der automatisch generierte Export key für dieses Feld ist *orderItem.typeId*.
 
 | *Attributwerte*
 | Exportiert die xref:artikel:attribute.adoc#[Attribute] der Auftragsposition. Der automatisch generierte Export key für dieses Feld ist *orderItem.attributeValues*.
