--- a/docs/en-gb/modules/data/pages/catalogue-format-order.adoc
+++ b/docs/en-gb/modules/data/pages/catalogue-format-order.adoc
@@ -23,7 +23,7 @@ The format type described on this page is found in the menu *Data » Catalogues*
 When creating a new catalogue, you’ll select the standard format from the upper drop-down list.
 Then you can select the format type *Order* from the middle drop-down list.
 
-image::data/exporting-data/catalogues/catalogue-formats/assets/catalogue-order.png[]
+image::data:catalogue-order.png[]
 
 [.collapseBox]
 .*What’s a standard format?
@@ -303,7 +303,7 @@ The automatically generated export key for this data field is *orderConfig.numbe
 
 [#130]
 ==== Payment terms
-In this subfolder data fields for xref:orders:managing-orders.adoc#intable-payment-terms[payment terms] are grouped.
+In this subfolder data fields for xref:orders:managing-orders.adoc#intable-payment-terms-order[payment terms] are grouped.
 
 [[catalogue-data-fields-folder-payment-terms]]
 .Data fields in the folder *Payment terms*
@@ -345,7 +345,7 @@ In this subfolder, data fields for order items are grouped. Additionally, there 
 | Exports the quantity of the order item. The automatically generated export key for this data field is *orderItem.quantity*.
 
 | *Type ID*
-| Exports the type of the order item. The xref:data:internal-IDs.adoc#100[type] is exported as ID. The automatically generated export key for this data field is *orderItem.typeId*.
+| Exports the type of the order item. The type is exported as ID. The automatically generated export key for this data field is *orderItem.typeId*.
 
 | *Attribute values*
 | Exports the xref:item:attributes.adoc#[attributes] of the order item. The automatically generated export key for this data field is *orderItem.attributeValues*.
