--- a/docs/en-gb/modules/orders/pages/scheduler.adoc
+++ b/docs/en-gb/modules/orders/pages/scheduler.adoc
@@ -87,7 +87,7 @@ The subscription function first needs to be activated globally and then separate
 [.instruction]
 Globally activating the subscription function:
 
-. Go to **xref:omni-channel:my-account.adoc#[Setup » Client » Select client » My Account » Settings]**.
+. Go to *Setup » Client » Select client » My Account » Settings*.
 . Select the setting **activated** for the option **Subscriptions**.
 . *Save* the settings.
 
