--- a/docs/en-gb/modules/orders/pages/order-types.adoc
+++ b/docs/en-gb/modules/orders/pages/order-types.adoc
@@ -14,7 +14,7 @@ The following order types are available in plentymarkets.
 * xref:orders:order-type-repair.adoc#[Repair]
 * xref:orders:order-type-return.adoc#[Return]
 * xref:orders:order-type-multi-order.adoc#[Multi-order]
-* xref:orders:order-type-multi-credit-note.adoc#[Multi credit note]
+* xref:orders:order-type-multi-order.adoc#generate-multi-credit-note[Multi credit note]
 * xref:orders:order-type-advance-order.adoc#[Advance order]
 
 [TIP]
