--- a/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
@@ -159,7 +159,7 @@ Take over shipping costs to the first order, the second gets none* = When splitt
 *Take over shipping costs to the order with the highest item value, the other gets none* = he shipping costs of the original order are taken over into the new order with the highest item value. The second order does not get any shipping costs.
 
 | [#intable-behaviour-after-splitting]*Behaviour of original order after splitting*
-|Select from the drop-down list what happens with the original order after it is xref:orders:working-with-orders.adoc#splitting-orders.adoc[split] into two new orders. +
+|Select from the drop-down list what happens with the original order after it is xref:orders:working-with-orders.adoc#splitting-orders[split] into two new orders. +
 *Delete original order (standard behaviour)* = The standard behaviour is that two new orders are created and the original order is deleted after splitting. You can split orders when they are not locked, outgoing items are not booked yet, no child orders have been created (e.g. returns), no tax-relevant documents have been created and no payments have been assigned to the order yet. +
 *Status change* = By using this option, two new orders are created as well. But the original order remains and is assigned a new order status defined by you. Select this order status from the second drop-down list. We recommend an order status in the cancellation range so that reserved stock does not remain reserved. But depending on your order processing a different order status might be more fitting. +
 With this setting, it is also allowed to split orders with payments already assigned to it and for which tax-relevant documents (important: invoice as well as reversal document) have been created. The assigned payment as well as the documents remain with the original order and are not transferred to the split orders.
