--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -644,10 +644,10 @@ Diese Auftragsdokumente passt du an die Anforderungen von {market} an. Wie das g
 * <<#return-notes, Rücksendescheine vorbereiten>>
 
 [TIP]
-.Umgang mit Rechnungen bei MyToys
+.Eigene Rechnungen für MyToys erstellen
 ====
-Rechnungen werden von MyToys erstellt und an deine Kund:innen versendet. Da MyToys nur Sammelrechnungen erstellt, kannst du diese nicht importieren. Für die Buchhaltung benötigst du jedoch die Rechnungen von MyToys. +
-Damit Rechnungen für MyToys dennoch in deinem Export für die Buchhaltung enthalten sind, musst du deshalb eigene Rechnungen für MyToys erstellen. Dann verbuchst du die Rechnungen von MyToys mit den selbst erstellten Rechnungen.
+Rechnungen werden von MyToys erstellt und an deine Kund:innen versendet. Diese Rechnungen werden nicht in plentymarkets importiert. +
+Für die Buchhaltung benötigst du jedoch die Rechnungen von MyToys. Deshalb solltest du zusätzlich eigene Rechnungen für MyToys erstellen und diese dann mit den Rechnungen von MyToys verbuchen.
 ====
 
 [#delivery-notes]
