ADD changes order UI

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -257,6 +257,9 @@ a|Zeigt den Zahlungsstatus des Auftrags an. +
 * Überbezahlt = Es wurde mehr als der ausstehende Betrag bezahlt. +
 Diese Spalte ist eine Standardspalte.
 
+| *Bezahlter Betrag (%)*
+|Zeigt den bezahlten Betrag in Prozent an.
+
 | *Zahlungsdatum*
 |Zeigt das Datum an, an dem die Zahlung für diesen Auftrag eingegangen ist. +
 Diese Spalte ist eine Standardspalte.
