--- a/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
+++ b/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
@@ -10,7 +10,7 @@ Im Menü *Einrichtung » Aufträge » Einstellungen* wählst du zunächst die Ei
 [TIP]
 .Umschaltfläche für neue Auftrags-UI aktivieren
 ======
-Während sich die neue Auftrags-UI noch in der beta-Phase befindet, kannst du selbst entscheiden, ob du diese bereits für die Verwaltung von Aufträgen verwenden möchtest. Aktivierst du im Menü *Einrichtung » Aufträge » Auftragstypen » Auftrag [Beta]* oben die Umschaltfläche *Neue Auftrags-UI (beta) verwenden und mit anderen Menüs verknüpfen*, wird automatisch die neue UI verwendet und mit anderen Menüs verknüpft. Links aus anderen Bereichen deines plentymarkets Systems führen dann immer zur neuen Auftrags-UI. Diese Einstellung musst du manuell vornehmen, denn standardmäßig ist die alte Auftrags-UI vorausgewählt und mit den anderen Menüs verknüpft.
+Während sich die neue Auftrags-UI noch in der beta-Phase befindet, kannst du selbst entscheiden, ob du diese bereits für die Verwaltung von Aufträgen verwenden möchtest. Aktivierst du im Menü *Einrichtung » Aufträge » Auftragstypen » Auftrag [Beta]* oben die Umschaltfläche *Neue Auftrags-UI (beta) verwenden und mit anderen Menüs verknüpfen*, wird automatisch die neue UI verwendet und mit anderen Menüs verknüpft. Mit Klick auf den Haupteintrag *Aufträge* gelangst du dann ebenfalls in das Menü *Aufträge » Aufträge (Testphase)* und Links aus anderen Bereichen deines plentymarkets Systems führen immer dorthin. Diese Einstellung musst du manuell vornehmen, denn standardmäßig ist die alte Auftrags-UI vorausgewählt und mit den anderen Menüs verknüpft.
 ======
 
 [#conditions]
