--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -170,7 +170,8 @@ Im Bereich *Übersicht* siehst du alle grundlegenden Informationen zum Auftrag. 
 |Zeigt den Rechnungsbetrag an.
 
 | *Bezahlter Betrag*
-|Zeigt den bezahlten Betrag an.
+|Zeigt den bezahlten Betrag an. +
+Bei diesem Feld kannst du im Bearbeitungsmodus über die Einstellung *Anzeigeformat Betrag* wählen, ob der Betrag *prozentual* oder *absolut* angezeigt werden soll.
 
 | *Versandkosten brutto*
 |Zeigt die Brutto-Versandkosten an.
@@ -321,7 +322,7 @@ In der Dropdown-Liste kannst du zwischen *Keine* und *Stufe 1* bis *Stufe 4* wä
 |Zeigt die Währung an.
 
 | *Retoure-Paketnummern*
-|Zeigt die Paketnummern einer Retoure kommasepariert an. Dieses Feld ist nur für den Auftragstyp *Retoure* verfügbar. Mit Klick auf terra:order_return[] wirst du zum Versand-Center weitergeleitet.
+|Zeigt die Paketnummern einer Retoure kommasepariert an. Dieses Feld ist nur für den Auftragstyp *Retoure* verfügbar. Mit Klick auf terra:order_return[] wirst du zum Versand-Center 2.0 weitergeleitet.
 
 |===
 
@@ -389,7 +390,7 @@ Die folgenden Felder stehen dir zur Verfügung: +
 
 ==== Adresse ändern
 
-Bei einer Adresse kannst du entweder einzelne Felder der aktuellen Adresse anpassen oder sogar eine komplett neue Adresse zuweisen, die die aktuelle Adresse ersetzt. Gehe wie im Folgenden beschrieben vor, um eine Adresse zu ändern.
+Bei einer Adresse kannst du entweder einzelne Felder der aktuellen Adresse anpassen oder eine bereits bestehende Adresse zuweisen, die die aktuelle Adresse ersetzt. Gehe wie im Folgenden beschrieben vor, um eine Adresse zu ändern.
 
 [.instruction]
 Einzelne Felder einer Adresse ändern:
@@ -415,7 +416,7 @@ Andere Adresse zuweisen:
 . Gehe in den Bereich *Adressen*.
 . Klicke bei der Rechnungs- bzw. Lieferadresse auf das Kontextmenü (material:more_vert[]).
 . Wähle die Option *Adresse ändern* (material:social_distance[]). +
-→ Ein Fenster mit den bereits verfügbaren Adressen wird geöffnet.
+→ Ein Fenster mit allen bereits verfügbaren Adressen des Kontakts wird geöffnet.
 . Klicke rechts in der Zeile der gewünschten Adresse auf *Adresse zuweisen* (material:add_link[]). +
 → Die gewählte Adresse wird als neue Adresse zugewiesen.
 
