ADD changes order UI

--- a/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
@@ -660,7 +660,7 @@ Reordering variations from a specific order (beta):
 |Setting |Explanation
 
 | *Add items to existing reorders if possible*
-|Select from the drop-down list whether the items should be added to an existing reorder or a new reorder should be created instead.
+|Select from the drop-down list whether the items should be added to an existing reorder with the same supplier and warehouse or whether a new reorder should be created instead.
 
 2+^| *Item information*
 
