formatting fix DE / add EN

--- a/docs/de-de/modules/app/pages/best-practices.adoc
+++ b/docs/de-de/modules/app/pages/best-practices.adoc
@@ -23,7 +23,7 @@ Berechtigungen für Kennzahlen vergeben:
 . Wechsele in das Tab *Mobile*.
 . Gehe zum Bereich *Sichtbare Kennzahlen*. +
 → Die Einzelberechtigungen für die verschiedenen Kennzahlen werden eingeblendet.
-. Wähle ((icon:check-square[role="blue"])) die Kennzahlen aus, die für das Benutzerkonto verfügbar sein sollen.
+. Wähle (icon:check-square[role="blue"]) die Kennzahlen aus, die für das Benutzerkonto verfügbar sein sollen.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [#200]
