--- a/docs/de-de/modules/app/pages/installieren.adoc
+++ b/docs/de-de/modules/app/pages/installieren.adoc
@@ -90,7 +90,7 @@ App-Berechtigungen festlegen:
 |Einstellung |Erläuterung
 
 | *Sichtbare Funktionen*
-|Welche xref:app:funktionen.adoc#[App-Funktionen] sollen deine Mitarbeiter:innen sehen können? Setze Häkchen und bestimme somit die genaue Menüpunkte, die für dieses Nutzerkonto sichtbar sein sollen.
+|Welche xref:app:funktionen.adoc#[App-Funktionen] sollen deine Mitarbeiter:innen sehen können? Setze Häkchen und bestimme somit die genauen Menüpunkte, die für dieses Nutzerkonto sichtbar sein sollen.
 
 | *Einbuchung*
 |Sollen deine Mitarbeiter:innen beim xref:app:einbuchen-umbuchen.adoc#[Einbuchen] den Einkaufspreis sehen und bearbeiten können? Setze Häkchen, um die Berechtigungen zu vergeben. +
