--- a/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
@@ -8,7 +8,7 @@
 include::partial$key-figure-introduction.adoc[]
 
 plentymarkets calculates the return rate by dividing the total number of credit notes and returns by the total number of all the order types except credit notes and returns: +
-_(∑ Credit notes ∑ Returns) : Number of all other order types = Return rate_ +
+_(∑ Credit notes + ∑ Returns) : Number of all other order types = Return rate_ +
 By choosing a xref:business-decisions:return-rate.adoc#100[calculation type], you decide whether to calculate the return rate or the return rate amount.
 In addition, select a xref:business-decisions:return-rate.adoc#200[dimension] to determine how the result is grouped.
 Set xref:business-decisions:return-rate.adoc#300[filters] to specify the criteria for the calculation of the return rate.
