--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -643,6 +643,13 @@ Adjust these order documents to the requirements of {market}. Check the followin
 * <<#delivery-notes, Prepare delivery notes>>
 * <<#return-notes, Preparing return slips>>
 
+[TIP]
+.Create invoices for MyToys
+====
+MyToys creates invoices and sends them to your customers. Those invoices are not imported into plentymarkets. +
+However, you will need the invoices from MyToys for accounting. Therefore, we recommend to additionally create your own invoices for MyToys so that you can book them.
+====
+
 [#delivery-notes]
 === Preparing delivery notes
 
@@ -923,7 +930,7 @@ include::_includes:partial$event-procedure.adoc[]
 | *Filter 1*
 | *Order > Order type*
 | *Order* +
-* Delivery order*
+*Delivery order*
 
 | *Filter 2*
 | *Order > Referrer*
