Added info box about MyToys invoices (#1063)
* First draft for MyToys invoices

* Changed info text

* Added translation

--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -643,6 +643,13 @@ Diese Auftragsdokumente passt du an die Anforderungen von {market} an. Wie das g
 * <<#delivery-notes, Lieferscheine vorbereiten>>
 * <<#return-notes, Rücksendescheine vorbereiten>>
 
+[TIP]
+.Eigene Rechnungen für MyToys erstellen
+====
+Rechnungen werden von MyToys erstellt und an deine Kund:innen versendet. Diese Rechnungen werden nicht in plentymarkets importiert. +
+Für die Buchhaltung benötigst du jedoch die Rechnungen von MyToys. Deshalb solltest du zusätzlich eigene Rechnungen für MyToys erstellen und diese dann mit den Rechnungen von MyToys verbuchen.
+====
+
 [#delivery-notes]
 === Lieferscheine vorbereiten
 
