add copy function for primary address

--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -340,7 +340,7 @@ Check the necessary settings that are listed here and activate (material:toggle_
 
 Here, the contact’s primary addresses are shown if you selected *Yes, primary* for the invoice address and/or the delivery address in the <<#addresses, Addresses>> area. When you open the contact data record, this area is opened by default and the available data is loaded. 
 
-Click on *New address* (material:add[]) to create a <<#addresses, new address>>. Click on material:more_vert[] to edit or delete the address.
+Click on *New address* (material:add[]) to create a <<#addresses, new address>>. Click on material:more_vert[] to edit or delete the address. Next to the email address or next to the phone number, click on material:content_copy[] to copy these values to the clipboard.
 
 [[image-primary-delivery-address-example]]
 .Example: Primary delivery address
