add back to template configuration

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -429,7 +429,7 @@ In diesem Bereich erstellst du den Inhalt deiner Vorlage mit Widgets und Variabl
 |[#intable-template-settings-edit]*Bearbeiten*
 |Klicke auf material:edit[] in der Zeile des Betreffs, um den Inhalt der Vorlage zu bearbeiten und <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> einzufügen. +
 Der Editor-Bereich öffnet sich und du kannst über die Widgets den Inhalt der Vorlage bearbeiten. +
-Mit einem Klick auf material:css[] in der Toolbar ganz oben kannst du das <<#intable-template-settings-custom-styles, benutzerdefinierte Styling>> deiner Vorlage anpassen.
+Mit einem Klick auf material:css[] in der Symbolleiste ganz oben kannst du das <<#intable-template-settings-custom-styles, benutzerdefinierte Styling>> deiner Vorlage anpassen.
 *_Hinweis:_* Die E-Mail-Vorlagen verwenden das Multipart-Format. Die E-Mails werden also gleichzeitig in einer HTML- und in einer Textversion versendet.
 
 |[#intable-template-settings-preview]*Vorschau*
@@ -485,7 +485,8 @@ In diesem Bereich nimmst du die sprachabhängigen Einstellungen vor. Für jede V
 *_Hinweis:_* Wenn die Vorlage vom Typ *Header* oder *Footer* ist, steht dir in diesem Bereich nur das Feld <<#intable-template-settings-custom-styles, Benutzerdefiniertes Styling>> zur Verfügung. Ein Betreff und statische Anhänge sind für Header und Footer nicht verfügbar.
 
 | material:translate[]
-|Mit einem Klick auf material:translate[] oben rechts im Bereich *Einstellungen* öffnen sich die sprachabhängigen Einstellungen der Vorlagen.
+|Mit einem Klick auf material:translate[] oben rechts im Bereich *Einstellungen* öffnen sich die sprachabhängigen Einstellungen der Vorlagen. +
+Für jede erstellte Sprache siehst du einen eigenen Bereich. Mit einem Klick auf material:expand_more[] kannst du einzelne Sprachbereiche zuklappen. Ein Klick auf material:chevron_right[] öffnet den Sprachbereich wieder.
 
 |[#intable-template-settings-subject]*Betreff*
 |Hier siehst du den Betreff der Vorlage. Du kannst den Betreff anpassen, wenn gewünscht. +
@@ -498,6 +499,9 @@ In diesem Bereich nimmst du die sprachabhängigen Einstellungen vor. Für jede V
 |[#intable-template-settings-custom-styles]*Benutzerdefiniertes Styling*
 |Hier kannst du das CSS-Styling deiner Vorlage, deines Headers und deines Footers anpassen. <<#beispiele-benutzerdefiniertes-styling, In der aufklappbaren Box unterhalb dieser Tabelle>> findest du einige gängige Beispiele, wie du das Styling deiner Vorlage anpassen kannst. +
 *_Tipp:_* Speichere die Einstellungen und öffne anschließend die *Vorschau* (material:preview[]), um deine Eingaben zu prüfen und ggf. weitere Anpassungen vorzunehmen.
+
+||[#intable-template-settings-back-to-template-configuration]*Zurück zur Vorlagenkonfiguration*
+|Mit einem Klick auf material:arrow_back[] ganz oben rechts gelangst du wieder zurück zu Vorlagenkonfiguration.
 
 |====
 
@@ -743,7 +747,7 @@ Standardvorlage erstellen:
 → Die Vorlage wird erstellt und geöffnet. 
 
 Sobald die Standardvorlage erstellt ist, siehst du im Editor den vorausgefüllten Inhalt. Den Inhalt kannst du mit einem Klick auf material:edit[] anpassen. +
-In der Toolbar siehst du den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf material:translate[] ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an die E-Mail-Vorlage anhängen möchtest. +
+In der Symbolleiste siehst du den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf material:translate[] ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an die E-Mail-Vorlage anhängen möchtest. +
 Im Bereich *Einstellungen* wählst du einen Eigner, den Mandanten und den Header und Footer, falls noch nicht geschehen. Dort kannst du auch bis zu 3 dynamische Anhänge wählen und die Felder *Antwort an*, *CC* und *BCC* befüllen.
 
 *_Hinweis:_* Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und wähle dann material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
@@ -998,7 +1002,7 @@ Du kannst deiner Vorlage, deinem Header und deinem Footer die folgenden Sprachen
 * Chinesisch
 * Vietnamesisch
 
-Angenommen, du hast eine Versandbestätigung in deutscher Sprache verfasst und Widgets und Variablen eingefügt  und möchtest diese Versandbestätigung auch in französischer Sprache für deine französischsprachigen Kund:innen erstellen. Dann ist der schnellste Weg, die Vorlage zu kopieren und anschließend die Übersetzung anzupassen. Wie du dazu vorgehen musst, ist im Kapitel <<#vorlage-kopieren, Vorlage kopieren>> beschrieben.
+Angenommen, du hast eine Versandbestätigung in deutscher Sprache verfasst und Widgets und Variablen eingefügt. Nun möchtest du diese Versandbestätigung auch in französischer Sprache für deine französischsprachigen Kund:innen erstellen. Der schnellste Weg ist dann, die Vorlage zu kopieren und anschließend die Übersetzung anzupassen. Wie du dazu vorgehen musst, ist im Kapitel <<#vorlage-kopieren, Vorlage kopieren>> beschrieben.
 
 [IMPORTANT]
 .Wichtig: Header und Footer in der jeweiligen Sprache hinzufügen
