--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -106,4 +106,15 @@ Du möchtest eine E-Mail-Vorlage, die die Tracking-URL (auch Sendungsverfolgung 
 Dann schau dir dieses xref:crm:praxisbeispiel-tracking-url-senden.adoc#[Praxisbeispiel] an, in dem wir Schritt für Schritt erklären, welche Einstellungen du in deinem plentymarkets System vornehmen musst.
 --
 
+
+[#emailbuilder-migration-alte-vorlagen]
+== EmailBuilder: Migration der alten Vorlagen
+
+[.collapseBox]
+.plenty migriert die alten E-Mail-Vorlagen aus meinem System auf die neue Version des EmailBuilders. Was bedeutet das und muss ich nach der Migration irgendetwas tun?
+--
+Wie in diesem Forumsbeitrag (ADD LINK) angekündigt, werden Vorlagen, die du in der Vergangenheit im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* erstellt hast, automatisch in den neuen EmailBuilder migriert.
+--
+
+
 // == E-Mail-Versand
