--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -88,10 +88,15 @@ Für neue Kaufland-Konten, die du im *Tab: Neues Konto* hinzufügst, ist diese E
 
 //*_Hintergrund:_* Mit der Ereignisaktion <<#in-fulfillment, In-Fulfillment-Bestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass ein Auftrag an das Lager übergeben wurde. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener In-Fulfillment-Bestätigung* gewählt hast.
 
-2+^| Artikeleinstellungen
+2+^| Artikeleinstellungen +
+
+*_Hinweis:_* Wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst, musst du hier keine Einstellungen vornehmen.
 
 | *Artikelexport aktivieren*
-|Wählen, ob der Artikelexport zu Kaufland.de aktiviert werden soll.
+|Wählen, ob der Artikelexport zu Kaufland.de aktiviert werden soll. +
+
+*_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Nur Artikel mit Markierung übertragen*
 a| * *Alle Artikel* = Alle Artikel werden übertragen.
@@ -116,11 +121,16 @@ Diese Einstellung greift für Artikeldaten und Angebotsdaten.
 | *Produktdatei zu Kaufland.de senden*
 |Produktdatei zu Kaufland.de übertragen.
 
-2+^| Angebotseinstellungen
+2+^| Angebotseinstellungen +
+
+*_Hinweis:_* Wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst, musst du hier keine Einstellungen vornehmen.
 
 | *Angebotsabgleich aktivieren*
 a| * *Ja* (Standardeinstellung) = Angebote werden stündlich und täglich bei Kaufland.de aktualisiert. Nur wenn diese Option und die Option *Schnittstelle zu Kaufland.de aktivieren* aktiviert sind, findet der tägliche vollständige Angebotsabgleich und der stündliche Abgleich für geänderte Angebote statt. +
-* *Nein* = Der Angebotsabgleich ist deaktiviert.
+* *Nein* = Der Angebotsabgleich ist deaktiviert. +
+
+*_Hinweis:_* Du kannst diese Einstellung *deaktivieren*, wenn du deine Artikel mit <<#catalogue-export, Katalogen>> an Kaufland überträgst. +
+Stelle jedoch sicher, dass du alle Varianten, die du auf Kaufland verkaufen möchtest, mit einem Kaufland-Katalog verknüpft hast, bevor du diese Einstellung deaktivierst. Wenn die Variante nicht mit einem Kaufland-Katalog verknüpft ist, wird sie nicht zu Kaufland exportiert.
 
 | *Cache-Datei generieren (Inventory)*
 a| *Ja* oder *Nein* wählen. +
