--- a/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
@@ -1,6 +1,6 @@
 = Praxisbeispiel: Teilstornierungen an MyToys senden
 :author: team-plenty-channel
-:keywords: MyToys, Teilstornierung, Stornierung, MyToys Stornierung, Stonierung, Teil Stornierung, stornieren
+:keywords: MyToys, Teilstornierung, Stornierung, MyToys Stornierung, Stonierung, Teil Stornierung, stornieren, MyToys Stornierung
 :description:
 
 Eine oder mehrere Positionen eines Auftrags sollen storniert werden, ohne den gesamten Auftrag zu stornieren? In diesem Praxisbeispiel erfährst du, wie du MyToys darüber informieren kannst, dass eine oder mehrere Positionen eines Auftrags storniert werden.
