--- a/docs/de-de/modules/maerkte/pages/maerkte.adoc
+++ b/docs/de-de/modules/maerkte/pages/maerkte.adoc
@@ -57,7 +57,7 @@ Außerdem findest du im plentyMarketplace weitere Plugins von Drittanbietern.
 
 [.logoList]
 //  Markt: myToys
-* xref:maerkte:mytoys.adoc#[image:maerkte:mytoys-logo.png[]]
+* xref:maerkte:mytoys-einrichten.adoc#[image:maerkte:mytoys-logo.png[]]
 //  Markt: neckermann
 * xref:maerkte:neckermann-at-einrichten.adoc#[image:maerkte:NeckermannLogo.jpg[]]
 //  Markt: Netto
