--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -446,7 +446,9 @@
 ** xref:maerkte:limango.adoc[limango]
 ** xref:maerkte:mercateo.adoc[Mercateo]
 ** xref:maerkte:metro.adoc[Metro]
-** xref:maerkte:mytoys.adoc[myToys]
+** xref:maerkte:mytoys.adoc[MyToys]
+*** xref:maerkte:mytoys-einrichten.adoc[MyToys einrichten]
+*** xref:maerkte:best-practice-mytoys-teilstornierung.adoc[Best Practice: Teilstornierungen senden]
 ** xref:maerkte:neckermann.adoc[Neckermann.at]
 *** xref:maerkte:neckermann-at-einrichten.adoc[Neckermann.at einrichten]
 *** xref:maerkte:best-practices-neckermann-storno-retoure.adoc[Best Practice: Neckermann.at]
