--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -433,6 +433,8 @@
 ** xref:markets:mercateo.adoc[Mercateo]
 ** xref:markets:metro.adoc[Metro]
 ** xref:markets:mytoys.adoc[myToys]
+*** xref:markets:mytoys-setup.adoc[Setting up MyToys]
+*** xref:markets:best-practice-mytoys-partial-cancellation.adoc[Best practice: Reporting partial cancellations]
 ** xref:markets:neckermann.adoc[Neckermann.at]
 *** xref:markets:neckermann-at-setup.adoc[Setting up Neckermann.at]
 *** xref:markets:best-practices-neckermann-cancellation-returns.adoc[Best practice: Neckermann.at]
