--- a/docs/en-gb/modules/markets/pages/markets.adoc
+++ b/docs/en-gb/modules/markets/pages/markets.adoc
@@ -57,7 +57,7 @@ In addition, further plugins from third-party providers are available in the ple
 
 [.logoList]
 //  Markt: myToys
-* xref:markets:mytoys.adoc#[image:markets:mytoys-logo.png[]]
+* xref:markets:mytoys-setup.adoc#[image:markets:mytoys-logo.png[]]
 //  Market: neckermann
 * xref:markets:neckermann-at-setup.adoc#[image:markets:NeckermannLogo.jpg[]]
 //  Market: Netto
