--- a/docs/en-gb/modules/markets/pages/mytoys-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys-setup.adoc
@@ -3,6 +3,7 @@
 :keywords: myToys, myToys, mytoys, my toys, mytois, mirapodo, yomonda
 :description: Multi-Channel in plentymarkets: Set up the interface to the market myToys in your plentymarkets system.
 :id: CQERJR4
+:page-pagination:
 
 :market: myToys
 :mytoys:
