--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -473,7 +473,8 @@ In this area, carry out the language-specific settings. Thus, you can carry out 
 *_Note:_* If the template is of the type *Header* or *Footer*, only the field <<#intable-template-settings-custom-styles, custom styles>> is available in this area. A subject and static attachments are not available for headers and footers.
 
 | material:translate[]
-|In the top right in the *Settings* area, click on material:translate[] to open the language-specific settings of the templates.
+|In the top right in the *Settings* area, click on material:translate[] to open the language-specific settings of the templates. +
+You can see an individual area for each language you created. Click on material:expand_more[] to collapse individual language areas. Clicking on material:chevron_right[] opens the language area again.
 
 |[#intable-template-settings-subject]*Subject*
 |You can see the template’s subject here. If needed, you can adjust the subject. +
@@ -487,33 +488,52 @@ In this area, carry out the language-specific settings. Thus, you can carry out 
 |You can adjust the CSS styling of your template, your header and your footer here. <<#examples-custom-styles, The collapsible box below this table>> contains some common examples for adjusting your template. +
 *_Tip:_* Save the settings and open the *Preview* (material:preview[]) to check your entries and to make further adjustments, if needed.
 
+||[#intable-template-settings-back-to-template-configuration]*Back to template configuration*
+|Click on material:arrow_back[] at the top right to go back to the template configuration.
+
 |====
 
 [#examples-custom-styles]
 [.collapseBox]
 .Custom styles: common examples
 --
-In this area, you can find some common examples about how to adjust the styling of your template.
+The following table lists some common examples about how to adjust the styling of your template.
 
 *_Note:_* If you want to save multiple CSS stylings for the template, enter all values one after the other, separated by a semicolon.
 
-*_Template width:_* Enter `max-width:` followed by the desired width in pixel, e.g. `max-width:1200px`. +
+[cols="2,4"]
+|===
+|CSS-Styling |Explanation
 
-*_Background colour:_* Enter `background-color:` in this field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `background-color:&#35;A9F5D0;`. +
+|Template width
+|Enter `max-width:` in the *Custom styles* field followed by the desired width in pixel, e.g. `max-width:1200px`.
 
-*_Font colour:_* Enter `color:` in this field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `color:&#35;A0A1B;`. +
+|Background colour
+|Enter `background-color:` in the Custom styles field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `background-color:&#35;A9F5D0;`.
 
-*_Font size:_* Enter `font-size:` in this field followed by the desired font size in pixel, e.g. `font-size:20px;`. +
+|Font colour
+|Enter `color:` in the *Custom styles* field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `color:&#35;A0A1B;`.
 
-*_Font weight:_* Enter `font-weight:` in this field followed by the desired font weight, e.g. `font-weight:700;`. +
+|Font size
+|Enter `font-size:` in the *Custom styles* field followed by the desired font size in pixel, e.g. `font-size:20px;`.
 
-*_Text alignment:_* Enter `text-align:center;` in this field if the text should be placed in the middle. Enter `text-align:right;` if the text should be aligned on the right. +
+|Font weight
+|Enter `font-weight:` in the *Custom styles* field followed by the desired font weight, e.g. `font-weight:700;`.
 
-*_Background image:_* Enter `background-image: url(_link_to_image_);` in this field and replace `_link_to_image_` with the corresponding image link to show a background image in your template. +
+|Text alignment
+|Enter `text-align:center;` in the *Custom styles* field if the text should be placed in the middle. Enter `text-align:right;` if the text should be aligned on the right.
 
-*_Text frame:_* Enter e.g. `border: 1px solid blue;` in this field to insert a blue frame with 1px around the text. +
+|Background image:
+|Enter `background-image: url(_link_to_image_);` in the *Custom styles* field and replace `_link_to_image_` with the corresponding image link to show a background image in your template.
 
-*_Inner margin:_* Enter `padding:10px;` in this field if the margin should be 10px on all sides. Enter `padding: 10px 20px;` if the margin should be 10px on the top and bottom and 20px on the left and right sides. +
+|Text frame
+|Enter e.g. `border: 1px solid blue;` in the *Custom styles* field to insert a blue frame with 1px around the text.
+
+|Inner margin
+|Enter `padding:10px;` in the *Custom styles* field if the margin should be 10px on all sides. Enter `padding: 10px 20px;` if the margin should be 10px on the top and bottom and 20px on the left and right sides.
+
+|===
+
 --
 
 [[image-emailbuilder-add-languages]]
@@ -739,6 +759,7 @@ Would you like to know which default templates are already available in the Emai
 [.collapseBox]
 .Default templates in the EmailBuilder and their subjects
 --
+
 *English default templates in the EmailBuilder and their subjects*
 
 [[table-default-templates-english]]
@@ -980,7 +1001,7 @@ You can add the following languages to your template, your header and your foote
 * Chinese
 * Vietnamese
 
-Let’s assume you have created a shipping confirmation in English and inserted widgets and variables. You now want to create this shipping confirmation also in French for your French-speaking customers. The quickest way is to copy the template and adjust the translation afterwards. How to proceed in this case is described in the <<#copy-template, Copying a template>> chapter.
+Let’s assume, you have created a shipping confirmation in English and added widgets and variables. Now, you want to create this shipping confirmation also in French for your French-speaking customers. The quickest way is to copy the template and adjust the translation afterwards. How to proceed in this case is described in the <<#copy-template, Copying a template>> chapter.
 
 [IMPORTANT]
 .Important: Add header and footer in the corresponding language
